changed Provider to Enum
